name:                with
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/with
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/with.git

library
  exposed-modules: Data.With
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude, ExplicitNamespaces, GADTs, PackageImports, TypeOperators
  ghc-options: -fno-warn-tabs
